--- a/public/index.html
+++ b/public/index.html
@@ -40,10 +40,10 @@
       <li><a href="contact.html">Contact</a></li>
     </ul>
 
+
+
+
 </div>
-
-
-
 
 <!--Header-->
 <header class="boxed" id="header-white">
@@ -59,15 +59,9 @@
 
   <!--Content-->
 
-  <div class="content" id="ajax-content">
-
-
-        <div class="text-intro" id="site-type">
-
-          <h1 class="typewrite"></h1>
-       
-        </div>
-
+  <div>
+    <img class="home" src="img/home.png"/>
+  </div>
 
   <!--Footer-->
 
