--- a/yay/index-fixed.html
+++ b/yay/index-fixed.html
@@ -8,11 +8,11 @@
   <meta name="description" content="THOMSOON with fixed sidebar - Portfolio with grid HTML5 and CSS3 modern simplicity style template. Check my portfolio. Download free now with file Photoshop! ">
   <meta name="keywords" content="thomsoon, simplicity, theme, html5, fixed sidebar">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <meta name="author" content="thomsoon.com">
+  <m name="author" content="thomsoon.com">
   <link rel="icon" type="image/png" href="img/icon.png" />
-
 <!--Style-->
 
+  <link href="css/hover-min.css" rel="stylesheet">
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/style-responsive.css">
@@ -21,7 +21,7 @@
   
   <!--[if lt IE 9]>
   <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-  <![endif]-->
+  <![endif]--eta>
   
 </head>
 
@@ -48,8 +48,7 @@
         <ul>
           <li><a class="ajax-link" href="projects.html">Projects</a></li> 
           <li><a class="ajax-link" href="single.html">Single project</a></li> 
-          <li><a class="ajax-link" href="single-full.html">Single project fullscreen</a></li> 
-                   
+          <li><a class="ajax-link" href="single-full.html">Single project fullscreen</a></li>                 
         </ul>
       
       </li>
